dataset1235/2025-2/1153765216/users/896391410/executions/2747719322_4233865845.log
== SUBMISSION (2025-08-19 19:12:57)
-- CODE: 
celsius = float(input("Digite o valor:"))
farenheit = celsius * (9/5) = 32

print (round (farenheit , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:13:27)
-- CODE: 
celsius = float(input("Digite o valor: "))
farenheit = celsius * (9/5) = 32

print(round (farenheit , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:13:46)
-- CODE: 
celsius = float(input("Digite o valor: "))
farenheit = celsius * (9/5) + 32

print(round (farenheit , 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite o valor: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite o valor: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite o valor: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite o valor: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite o valor: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite o valor: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:13:29)
-- CODE: 
celsius = float(input("Digite o valor: "))
farenheit = celsius * (9/5) = 32

print(round (farenheit , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    farenheit = celsius * (9/5) = 32
                ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
